2002-09-26  Dmitriy Anisimkov <anisimkov@yahoo.com>

	* aws-digest.adb:
	(Check_Nonce): Check that nonce has a correct length first.

2002-09-25  Pascal Obry  <p.obry@wanadoo.fr>

	* aws-client.adb:
	Change reference to Is_Match by Match.

	* aws-server-protocol_handler.adb:
	Change reference to Is_Match by Match.

	* aws-status-set.adb:
	Change reference to Is_Match by Match.

	* aws-url.adb:
	Change reference to Is_Match by Match.

	* aws-messages.ads, aws-messages.adb:
	(Is_Match): Renamed to Match.

	* aws-client.adb:
	(QOP_Data): Use AWS.Utils.Hex. Cleaner.
	(Parse_Authenticate_Line): Rename parameter Data to Auth_Line.
	Fix some comments.

	* aws-utils.ads, aws-utils.adb:
	(Hex): Add parameter Width.

2002-09-25  Pascal Obry  <p.obry@wanadoo.fr>

	* aws-status.adb:
	Minor reformatting.
	
	* aws-status.ads:
	Minor reformatting.
	Put the pragma Inline next to the spec (before the comment).
	
	* aws-status-set.adb:
	Minor reformatting.

	* aws-session.adb:
	Minor reformatting.
	Add some missing routine headers.

	* aws-server-protocol_handler.adb:
	Minor reformatting.

	* aws-response.ads, aws-response.adb:
	Minor reformatting.

	* aws-messages.ads, aws-messages.adb:
	Minor reformatting.

	* aws-digest.ads, aws-digest.adb: 
	Reformat code.

	* aws-client.ads:
	Minor reformatting.
	Fix some comments.

	* aws-client.adb:
	Reformat code. Put some ??? to indicate a need for more comments.

	* aws-utils.ads:
	Reformat code.
	Fix comments.

	* aws-utils.adb:
	Reformat code.

2002-09-25  Dmitriy Anisimkov  <anisimkov@yahoo.com>

	* aws-client.adb:
	(Decrement_Authentication_Attempt): New routine.
	(Set_Authentication): New routine.
	(Parse_Header): Support for parsing of WWW-Authenticate header line,
	 Keep_Alive flag instead of return Connection header line for correctly
	 support keep-alive connections on the HTTP/1.0 and HTTP/1.1 versions.
	(Get_Response): Check status after the receiving body.
	 Ignoring body is a dangerous, becouse we could receive correct